Yaml Files/httpd-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: httpd-pod
 labels: 
   app: httpd
   tier: dev
spec:
  containers:
  - name: httpd
    image: httpd

    ports:
    - containerPort: 80
