Yaml Files/nginx-pod-configmap-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-configmap-vol

spec:
   containers:
   - name: nginx-container
     image: nginx
     volumeMounts:
     - name: test-vol
       mountPath: "/etc/non-sensitive-data"
       readOnly: true
   volumes:
   - name: test-vol
     configMap:
       name: nginx-configmap-vol
