Yaml Files/nginx-pod-secret-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-secret-vol

spec:
   containers:
   - name: nginx-container
     image: nginx
     volumeMounts:
     - name: test-vol
       mountPath: "/etc/confidential"
       readOnly: true
   volumes:
   - name: test-vol
     secret:
       secretName: nginx-secret-vol
