Yaml Files/service-networ.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
     app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  
  type: ClusterIP
