Yaml Files/ingress-network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: my-ingress
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: my-service
             port:
               number: 80
